// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testimonial block saved block HTML shouldn't change 1`] = `
<div
  className="wp-block-ugb-testimonial ugb-testimonial ugb-testimonial--v2 ugb-testimonial--columns-1 ugb-testimonial--design-design className"
>
  <div
    className="ugb-testimonial__item ugb--shadow-1"
    style={
      Object {
        "borderRadius": 6,
      }
    }
  >
    <div
      className="ugb-testimonial__body-wrapper"
    >
      <p
        className="ugb-testimonial__body"
        style={
          Object {
            "color": "#123456",
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "testimonial1",
            }
          }
        />
      </p>
    </div>
    <div
      className="ugb-testimonial__person"
    >
      <div
        className="ugb-testimonial__image"
        style={
          Object {
            "backgroundImage": "url(mediaURL1)",
          }
        }
      />
      <h4
        className="ugb-testimonial__name"
        style={
          Object {
            "color": "#123456",
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "name1",
            }
          }
        />
      </h4>
      <p
        className="ugb-testimonial__position"
        style={
          Object {
            "color": "#123456",
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "position1",
            }
          }
        />
      </p>
    </div>
  </div>
</div>
`;

exports[`Testimonial block saved default block HTML shouldn't change 1`] = `
<div
  className="wp-block-ugb-testimonial ugb-testimonial ugb-testimonial--v2 ugb-testimonial--columns-2 ugb-testimonial--design-basic"
>
  <div
    className="ugb-testimonial__item"
    style={
      Object {
        "borderRadius": undefined,
      }
    }
  >
    <div
      className="ugb-testimonial__body-wrapper"
    >
      <p
        className="ugb-testimonial__body"
        style={
          Object {
            "color": undefined,
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "Description for this block. Use this space for describing your block. Any text will do. Description for this block. You can use this space for describing your block.",
            }
          }
        />
      </p>
    </div>
    <div
      className="ugb-testimonial__person"
    >
      <h4
        className="ugb-testimonial__name"
        style={
          Object {
            "color": undefined,
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "Name",
            }
          }
        />
      </h4>
      <p
        className="ugb-testimonial__position"
        style={
          Object {
            "color": undefined,
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "Position",
            }
          }
        />
      </p>
    </div>
  </div>
  <div
    className="ugb-testimonial__item"
    style={
      Object {
        "borderRadius": undefined,
      }
    }
  >
    <div
      className="ugb-testimonial__body-wrapper"
    >
      <p
        className="ugb-testimonial__body"
        style={
          Object {
            "color": undefined,
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "Description for this block. Use this space for describing your block. Any text will do. Description for this block. You can use this space for describing your block.",
            }
          }
        />
      </p>
    </div>
    <div
      className="ugb-testimonial__person"
    >
      <h4
        className="ugb-testimonial__name"
        style={
          Object {
            "color": undefined,
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "Name",
            }
          }
        />
      </h4>
      <p
        className="ugb-testimonial__position"
        style={
          Object {
            "color": undefined,
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "Position",
            }
          }
        />
      </p>
    </div>
  </div>
</div>
`;
